--- a/player.html
+++ b/player.html
@@ -1,4 +1,4 @@
-<audio controls class="audioplay" style="width: 700px;">
+<audio controls class="audiplay" style="width: 700px;">
     <source src="https://drive.google.com/uc?export=download&id=103BY-MZVIqgacYXf0Cu_T8fEEnzCl_jW" type="audio/mp3">
 </audio>
 
