Uncomment volume-slider

--- a/player.html
+++ b/player.html
@@ -62,7 +62,7 @@
                 float: left;
             }
 
-            #volume-slider {
+            volume-slider {
                 margin: 10px 2.5%;
                 width: 58%;
             }
