Uncomment all "volume-slider" + "mute-icon"

--- a/player.html
+++ b/player.html
@@ -66,19 +66,19 @@
                 margin: 10px 2.5%;
                 width: 58%;
             }
-            #volume-slider::-webkit-slider-runnable-track {
+            volume-slider::-webkit-slider-runnable-track {
                 background: rgba(0, 125, 181, 0.6);
             }
-            #volume-slider::-moz-range-track {
+            volume-slider::-moz-range-track {
                 background: rgba(0, 125, 181, 0.6);
             }
-            #volume-slider::-ms-fill-upper {
+            volume-slider::-ms-fill-upper {
                 background: rgba(0, 125, 181, 0.6);
             }
-            #volume-slider::before {
+            volume-slider::before {
                 width: var(--volume-before-width);
             }
-            #mute-icon {
+            mute-icon {
                 margin: 20px 2.5% 10px 2.5%;
             }
             input[type="range"] {
