comment mute-icon

--- a/player.html
+++ b/player.html
@@ -78,7 +78,7 @@
             volume-slider::before {
                 width: var(--volume-before-width);
             }
-            mute-icon {
+            #mute-icon {
                 margin: 20px 2.5% 10px 2.5%;
             }
             input[type="range"] {
