--- a/player.html
+++ b/player.html
@@ -51,7 +51,7 @@
                 margin: 20px 2.5% 10px 2.5%;
             }
             path {
-                stroke: #007db5;
+                stroke: #0d6647;
             }
             .time {
                 display: inline-block;
