change gradient : to right

--- a/player.html
+++ b/player.html
@@ -35,7 +35,7 @@
                 height: calc(100% + 4px);
                 left: -2px;
                 top: -2px;
-                background: linear-gradient(to left, #acceb0, #0d6647);
+                background: linear-gradient(to right, #acceb0, #0d6647);
                 z-index: -1;
             }
             p {
