--- a/player.html
+++ b/player.html
@@ -61,7 +61,7 @@
                 margin: 28.5px 0 18.5px 0;
                 float: left;
             }
-            output {
+            <!-- output {
                 display: inline-block;
                 width: 32px;
                 text-align: center;
@@ -69,7 +69,7 @@
                 margin: 10px 2.5% 0 5%;
                 float: left;
                 clear: left;
-            }
+            } -->
             #volume-slider {
                 margin: 10px 2.5%;
                 width: 58%;
