--- a/player.html
+++ b/player.html
@@ -189,7 +189,7 @@
             <span id="duration" class="time">0:00</span>
 
             <!--volumn slider can be added using css-->
-            // <output id="volume-output">100</output>
+            <output id="volume-output"></output>
             <input type="range" id="volume-slider" max="100" value="100">
             <button id="mute-icon"></button>
         </div>
