--- a/player.html
+++ b/player.html
@@ -176,19 +176,24 @@
                 transform: scale(1.2);
                 background: #007db5;
             }
+<!--
           #volume-slider {
             display:none;
             }
+-->
         </style>
         <div id="audio-player-container">
             <audio src="" preload="metadata" loop></audio>
-            <p>My song title</p><!--Title-->
+
+            <!--Title-->
+            <p>My song title</p>
+
             <button id="play-icon"></button>
             <span id="current-time" class="time">0:00</span>
             <input type="range" id="seek-slider" max="100" value="0">
             <span id="duration" class="time">0:00</span>
 
-            <!--volumn slider can be added using css-->
+            <!--volume slider can be added using css-->
             <output id="volume-output"></output>
             <input type="range" id="volume-slider" max="100" value="100">
             <button id="mute-icon"></button>
