--- a/player.html
+++ b/player.html
@@ -20,7 +20,8 @@
                 margin: 100px 2.5% auto 2.5%;
                 width: 95%;
                 max-width: 500px;
-                height: 132px;
+                <!-- height: 132px; -->
+                height: 80px;
                 background: #fff;
                 font-family: Arial, Helvetica, sans-serif;
                 --seek-before-width: 0%;
