--- a/player.html
+++ b/player.html
@@ -193,10 +193,10 @@
             <input type="range" id="seek-slider" max="100" value="0">
             <span id="duration" class="time">0:00</span>
 
-            <!--volume slider can be added using css-->
+            <!--volume slider can be added using css : HOW??? -->
+        <!-- 
             <output id="volume-output"></output>
             <input type="range" id="volume-slider" max="100" value="100">
-        <!-- 
             <button id="mute-icon"></button>
         -->
         </div>
