--- a/player.html
+++ b/player.html
@@ -5,6 +5,7 @@
 <template>
         <!-- Customizable Css -->
         <style> 
+	/* Play button */
             button {
                 padding: 0;
                 border: 0;
@@ -15,12 +16,13 @@
                 height: 40px;
                 float: left;
             }
+	/* Player border */
             #audio-player-container {
                 position: relative;
-                margin: 100px 2.5% auto 2.5%;
+                margin: 20px 2.5% auto 2.5%;
                 width: 95%;
                 max-width: 500px;
-                height: 132px;
+				height: 75px;   /* was previoulsy height: 132px; */
                 background: #fff;
                 font-family: Arial, Helvetica, sans-serif;
                 --seek-before-width: 0%;
@@ -38,13 +40,14 @@
                 background: linear-gradient(to right, #acceb0, #0d6647);
                 z-index: -1;
             }
+	/* Track title */
             p {
                 position: absolute;
-                top: -18px;
+                top: -12px;
                 right: 5%;
                 padding: 0 5px;
                 margin: 0;
-                font-size: 28px;
+                font-size: 18px;
                 background: #fff;
             }
             #play-icon {
@@ -57,34 +60,17 @@
                 display: inline-block;
                 width: 37px;
                 text-align: center;
-                font-size: 20px;
+                font-size: 18px;
                 margin: 28.5px 0 18.5px 0;
                 float: left;
             }
-            
-            #volume-slider {
-                margin: 10px 2.5%;
-                width: 58%;
-            }
-            #volume-slider::-webkit-slider-runnable-track {
-                background: rgba(0, 125, 181, 0.6);
-            }
-            #volume-slider::-moz-range-track {
-                background: rgba(0, 125, 181, 0.6);
-            }
-            #volume-slider::-ms-fill-upper {
-                background: rgba(0, 125, 181, 0.6);
-            }
-            #volume-slider::before {
-                width: var(--volume-before-width);
-            }
-            #mute-icon {
-                margin: 20px 2.5% 10px 2.5%;
-            }
+
             input[type="range"] {
                 position: relative;
                 -webkit-appearance: none;
-                width: 48%;
+				/* Length of the track slider */
+				width: 64%;
+				/* width: 48%; */
                 margin: 0;
                 padding: 0;
                 height: 19px;
@@ -92,12 +78,14 @@
                 float: left;
                 outline: none;
             }
+
             input[type="range"]::-webkit-slider-runnable-track {
                 width: 100%;
                 height: 3px;
                 cursor: pointer;
-                background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+                background: linear-gradient(to right, rgba(00, 92, 59, 0.6) var(--buffered-width), rgba(00, 92, 59, 0.2) var(--buffered-width));
             }
+			
             input[type="range"]::before {
                 position: absolute;
                 content: "";
@@ -105,14 +93,15 @@
                 left: 0;
                 width: var(--seek-before-width);
                 height: 3px;
-                background-color: #007db5;
+                background-color: #005c3b;
                 cursor: pointer;
             }
+
             input[type="range"]::-webkit-slider-thumb {
                 position: relative;
                 -webkit-appearance: none;
                 box-sizing: content-box;
-                border: 1px solid #007db5;
+                border: 1px solid #005c3b;
                 height: 15px;
                 width: 15px;
                 border-radius: 50%;
@@ -122,13 +111,14 @@
             }
             input[type="range"]:active::-webkit-slider-thumb {
                 transform: scale(1.2);
-                background: #007db5;
+                background: #005c3b;
             }
+
             input[type="range"]::-moz-range-track {
                 width: 100%;
                 height: 3px;
                 cursor: pointer;
-                background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+                background: linear-gradient(to right, rgba(0, 92, 59, 0.6) var(--buffered-width), rgba(0, 92, 59, 0.2) var(--buffered-width));
             }
             input[type="range"]::-moz-range-progress {
                 background-color: #007db5;
@@ -138,7 +128,7 @@
             }
             input[type="range"]::-moz-range-thumb {
                 box-sizing: content-box;
-                border: 1px solid #007db5;
+                border: 1px solid #005c3b;
                 height: 15px;
                 width: 15px;
                 border-radius: 50%;
@@ -147,58 +137,20 @@
             }
             input[type="range"]:active::-moz-range-thumb {
                 transform: scale(1.2);
-                background: #007db5;
+                background: #005c3b;
             }
-            input[type="range"]::-ms-track {
-                width: 100%;
-                height: 3px;
-                cursor: pointer;
-                background: transparent;
-                border: solid transparent;
-                color: transparent;
-            }
-            input[type="range"]::-ms-fill-lower {
-                background-color: #007db5;
-            }
-            input[type="range"]::-ms-fill-upper {
-                background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
-            }
-            input[type="range"]::-ms-thumb {
-                box-sizing: content-box;
-                border: 1px solid #007db5;
-                height: 15px;
-                width: 15px;
-                border-radius: 50%;
-                background-color: #fff;
-                cursor: pointer;
-            }
-            input[type="range"]:active::-ms-thumb {
-                transform: scale(1.2);
-                background: #007db5;
-            }
-<!--
-          #volume-slider {
-            display:none;
-            }
--->
         </style>
+
         <div id="audio-player-container">
             <audio src="" preload="metadata" loop></audio>
 
-            <!--Title-->
+            <!-- Song#1 -->
             <p>My song title</p>
-
             <button id="play-icon"></button>
             <span id="current-time" class="time">0:00</span>
             <input type="range" id="seek-slider" max="100" value="0">
             <span id="duration" class="time">0:00</span>
 
-            <!--volume slider can be added using css : HOW??? -->
-        <!-- 
-            <output id="volume-output"></output>
-            <input type="range" id="volume-slider" max="100" value="100">
-            <button id="mute-icon"></button>
-        -->
         </div>
     </template>
     <audio-player data-src="https://github.com/SH20RAJ/AudiPlay/raw/main/Ark.mp3"></audio-player>
