--- a/player.html
+++ b/player.html
@@ -22,7 +22,7 @@
                 margin: 20px 2.5% auto 2.5%;
                 width: 95%;
                 max-width: 500px;
-				height: 75px;   /* was previoulsy height: 132px; */
+		height: 75px;   /* was previoulsy height: 132px; */
                 background: #fff;
                 font-family: Arial, Helvetica, sans-serif;
                 --seek-before-width: 0%;
@@ -40,7 +40,7 @@
                 background: linear-gradient(to right, #acceb0, #0d6647);
                 z-index: -1;
             }
-	/* Track title */
+	    /* Track title - style */
             p {
                 position: absolute;
                 top: -12px;
@@ -64,13 +64,12 @@
                 margin: 28.5px 0 18.5px 0;
                 float: left;
             }
-
             input[type="range"] {
                 position: relative;
                 -webkit-appearance: none;
-				/* Length of the track slider */
-				width: 64%;
-				/* width: 48%; */
+		/* Length of the track slider */
+		width: 64%;
+		/* width: 48%; */
                 margin: 0;
                 padding: 0;
                 height: 19px;
@@ -78,14 +77,12 @@
                 float: left;
                 outline: none;
             }
-
             input[type="range"]::-webkit-slider-runnable-track {
                 width: 100%;
                 height: 3px;
                 cursor: pointer;
                 background: linear-gradient(to right, rgba(00, 92, 59, 0.6) var(--buffered-width), rgba(00, 92, 59, 0.2) var(--buffered-width));
             }
-			
             input[type="range"]::before {
                 position: absolute;
                 content: "";
@@ -96,7 +93,6 @@
                 background-color: #005c3b;
                 cursor: pointer;
             }
-
             input[type="range"]::-webkit-slider-thumb {
                 position: relative;
                 -webkit-appearance: none;
@@ -113,7 +109,6 @@
                 transform: scale(1.2);
                 background: #005c3b;
             }
-
             input[type="range"]::-moz-range-track {
                 width: 100%;
                 height: 3px;
@@ -121,7 +116,7 @@
                 background: linear-gradient(to right, rgba(0, 92, 59, 0.6) var(--buffered-width), rgba(0, 92, 59, 0.2) var(--buffered-width));
             }
             input[type="range"]::-moz-range-progress {
-                background-color: #007db5;
+                background-color: #005c3b;
             }
             input[type="range"]::-moz-focus-outer {
                 border: 0;
@@ -143,17 +138,17 @@
 
         <div id="audio-player-container">
             <audio src="" preload="metadata" loop></audio>
-
-            <!-- Song#1 -->
             <p>My song title</p>
             <button id="play-icon"></button>
             <span id="current-time" class="time">0:00</span>
             <input type="range" id="seek-slider" max="100" value="0">
             <span id="duration" class="time">0:00</span>
-
         </div>
     </template>
+
+    <!--Audio Tags-->
     <audio-player data-src="https://github.com/SH20RAJ/AudiPlay/raw/main/Ark.mp3"></audio-player>
+    <audio-player data-src="https://assets.codepen.io/4358584/Anitek_-_Komorebi.mp3"></audio-player>
     <script type="module" src="https://cdn.jsdelivr.net/gh/SH20RAJ/AudiPlayV2@main/audiplayv2.js"></script>
 </body>
 </html>
