--- a/player.html
+++ b/player.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<!-- Customizable template of Audio Player -->
+<!-- Customizable audio player template: https://css-tricks.com/lets-create-a-custom-audio-player/ -->
 <template>
         <!-- Customizable Css -->
         <style> 
