--- a/player.html
+++ b/player.html
@@ -134,6 +134,33 @@
                 transform: scale(1.2);
                 background: #005c3b;
             }
+	    input[type="range"]::-ms-track {
+                width: 100%;
+                height: 3px;
+                cursor: pointer;
+                background: transparent;
+                border: solid transparent;
+                color: transparent;
+            }
+            input[type="range"]::-ms-fill-lower {
+                background-color: #007db5;
+            }
+            input[type="range"]::-ms-fill-upper {
+                background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
+            }
+            input[type="range"]::-ms-thumb {
+                box-sizing: content-box;
+                border: 1px solid #007db5;
+                height: 15px;
+                width: 15px;
+                border-radius: 50%;
+                background-color: #fff;
+                cursor: pointer;
+            }
+            input[type="range"]:active::-ms-thumb {
+                transform: scale(1.2);
+                background: #007db5;
+            }
         </style>
 
         <div id="audio-player-container">
