--- a/player.html
+++ b/player.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <title>Simple audio player</title>
+  <link rel="icon" href="https://github.com/SH20RAJ/AudiPlay/raw/main/svg/loop.svg">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
+</head>
 <body>
-<!-- Customizable audio player template: https://css-tricks.com/lets-create-a-custom-audio-player/ -->
 <template>
-        <!-- Customizable Css -->
+        <!-- Customizable CSS -->
+	<!-- Doc: https://css-tricks.com/lets-create-a-custom-audio-player/ -->
         <style> 
-	/* Play button */
+	    /* Play button */
             button {
                 padding: 0;
                 border: 0;
@@ -16,7 +22,7 @@
                 height: 40px;
                 float: left;
             }
-	/* Player border */
+	    /* Player border */
             #audio-player-container {
                 position: relative;
                 margin: 20px 2.5% auto 2.5%;
