--- a/player.html
+++ b/player.html
@@ -176,6 +176,7 @@
             <span id="current-time" class="time">0:00</span>
             <input type="range" id="seek-slider" max="100" value="0">
             <span id="duration" class="time">0:00</span>
+	    <output id="volume-output"></output>
         </div>
     </template>
 
