--- a/player.html
+++ b/player.html
@@ -87,7 +87,7 @@
                 width: 100%;
                 height: 3px;
                 cursor: pointer;
-                background: linear-gradient(to right, rgba(00, 92, 59, 0.6) var(--buffered-width), rgba(00, 92, 59, 0.2) var(--buffered-width));
+                background: linear-gradient(to right, rgba(0, 92, 59, 0.6) var(--buffered-width), rgba(0, 92, 59, 0.2) var(--buffered-width));
             }
             input[type="range"]::before {
                 position: absolute;
@@ -177,6 +177,8 @@
             <input type="range" id="seek-slider" max="100" value="0">
             <span id="duration" class="time">0:00</span>
 	    <output id="volume-output"></output>
+	    <input type="range" id="volume-slider" max="100" value="100">
+            <button id="mute-icon"></button>
         </div>
     </template>
 
