--- a/player.html
+++ b/player.html
@@ -70,6 +70,10 @@
                 margin: 28.5px 0 18.5px 0;
                 float: left;
             }
+	    #mute-icon {
+                /* margin: 20px 2.5% 10px 2.5%; */
+		margin: 1px 2.5% 1px 2.5%;
+            }
             input[type="range"] {
                 position: relative;
                 -webkit-appearance: none;
@@ -176,8 +180,8 @@
             <span id="current-time" class="time">0:00</span>
             <input type="range" id="seek-slider" max="100" value="0">
             <span id="duration" class="time">0:00</span>
-	    <output id="volume-output"></output>
-	    <input type="range" id="volume-slider" max="100" value="100">
+	    <!-- <output id="volume-output"></output>
+	    <input type="range" id="volume-slider" max="100" value="100"> -->
             <button id="mute-icon"></button>
         </div>
     </template>
