--- a/player.html
+++ b/player.html
@@ -4,191 +4,16 @@
   <meta charset="UTF-8">
   <title>Simple audio player</title>
   <link rel="icon" href="https://github.com/SH20RAJ/AudiPlay/raw/main/svg/loop.svg">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-<template>
-        <!-- Customizable CSS -->
-	<!-- Doc: https://css-tricks.com/lets-create-a-custom-audio-player/ -->
-        <style> 
-	    /* Play button */
-            button {
-                padding: 0;
-                border: 0;
-                background: transparent;
-                cursor: pointer;
-                outline: none;
-                width: 40px;
-                height: 40px;
-                float: left;
-            }
-	    /* Player border */
-            #audio-player-container {
-                position: relative;
-                margin: 20px 2.5% auto 2.5%;
-                width: 95%;
-                max-width: 500px;
-		height: 75px;   /* was previoulsy height: 132px; */
-                background: #fff;
-                font-family: Arial, Helvetica, sans-serif;
-                --seek-before-width: 0%;
-                --volume-before-width: 100%;
-                --buffered-width: 0%;
-                letter-spacing: -0.5px;
-            }
-            #audio-player-container::before {
-                position: absolute;
-                content: '';
-                width: calc(100% + 4px);
-                height: calc(100% + 4px);
-                left: -2px;
-                top: -2px;
-                background: linear-gradient(to right, #acceb0, #0d6647);
-                z-index: -1;
-            }
-	    /* Track title - style */
-            p {
-                position: absolute;
-                top: -12px;
-                right: 5%;
-                padding: 0 5px;
-                margin: 0;
-                font-size: 18px;
-                background: #fff;
-            }
-            #play-icon {
-                margin: 20px 2.5% 10px 2.5%;
-            }
-            path {
-                stroke: #0d6647;
-            }
-            .time {
-                display: inline-block;
-                width: 37px;
-                text-align: center;
-                font-size: 18px;
-                margin: 28.5px 0 18.5px 0;
-                float: left;
-            }
-	    #mute-icon {
-                /* margin: 20px 2.5% 10px 2.5%; */
-		margin: 1px 2.5% 1px 2.5%;
-            }
-            input[type="range"] {
-                position: relative;
-                -webkit-appearance: none;
-		/* Length of the track slider */
-		width: 64%;
-		/* width: 48%; */
-                margin: 0;
-                padding: 0;
-                height: 19px;
-                margin: 30px 2.5% 20px 2.5%;
-                float: left;
-                outline: none;
-            }
-            input[type="range"]::-webkit-slider-runnable-track {
-                width: 100%;
-                height: 3px;
-                cursor: pointer;
-                background: linear-gradient(to right, rgba(0, 92, 59, 0.6) var(--buffered-width), rgba(0, 92, 59, 0.2) var(--buffered-width));
-            }
-            input[type="range"]::before {
-                position: absolute;
-                content: "";
-                top: 8px;
-                left: 0;
-                width: var(--seek-before-width);
-                height: 3px;
-                background-color: #005c3b;
-                cursor: pointer;
-            }
-            input[type="range"]::-webkit-slider-thumb {
-                position: relative;
-                -webkit-appearance: none;
-                box-sizing: content-box;
-                border: 1px solid #005c3b;
-                height: 15px;
-                width: 15px;
-                border-radius: 50%;
-                background-color: #fff;
-                cursor: pointer;
-                margin: -7px 0 0 0;
-            }
-            input[type="range"]:active::-webkit-slider-thumb {
-                transform: scale(1.2);
-                background: #005c3b;
-            }
-            input[type="range"]::-moz-range-track {
-                width: 100%;
-                height: 3px;
-                cursor: pointer;
-                background: linear-gradient(to right, rgba(0, 92, 59, 0.6) var(--buffered-width), rgba(0, 92, 59, 0.2) var(--buffered-width));
-            }
-            input[type="range"]::-moz-range-progress {
-                background-color: #005c3b;
-            }
-            input[type="range"]::-moz-focus-outer {
-                border: 0;
-            }
-            input[type="range"]::-moz-range-thumb {
-                box-sizing: content-box;
-                border: 1px solid #005c3b;
-                height: 15px;
-                width: 15px;
-                border-radius: 50%;
-                background-color: #fff;
-                cursor: pointer;
-            }
-            input[type="range"]:active::-moz-range-thumb {
-                transform: scale(1.2);
-                background: #005c3b;
-            }
-	    input[type="range"]::-ms-track {
-                width: 100%;
-                height: 3px;
-                cursor: pointer;
-                background: transparent;
-                border: solid transparent;
-                color: transparent;
-            }
-            input[type="range"]::-ms-fill-lower {
-                background-color: #007db5;
-            }
-            input[type="range"]::-ms-fill-upper {
-                background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width));
-            }
-            input[type="range"]::-ms-thumb {
-                box-sizing: content-box;
-                border: 1px solid #007db5;
-                height: 15px;
-                width: 15px;
-                border-radius: 50%;
-                background-color: #fff;
-                cursor: pointer;
-            }
-            input[type="range"]:active::-ms-thumb {
-                transform: scale(1.2);
-                background: #007db5;
-            }
-        </style>
-
-        <div id="audio-player-container">
-            <audio src="" preload="metadata" loop></audio>
-            <p>My song title</p>
-            <button id="play-icon"></button>
-            <span id="current-time" class="time">0:00</span>
-            <input type="range" id="seek-slider" max="100" value="0">
-            <span id="duration" class="time">0:00</span>
-	    <!-- <output id="volume-output"></output>
-	    <input type="range" id="volume-slider" max="100" value="100"> -->
-            <button id="mute-icon"></button>
-        </div>
-    </template>
-
-    <!--Audio Tags-->
-    <audio-player data-src="https://github.com/SH20RAJ/AudiPlay/raw/main/Ark.mp3"></audio-player>
-    <audio-player data-src="https://assets.codepen.io/4358584/Anitek_-_Komorebi.mp3"></audio-player>
-    <script type="module" src="https://cdn.jsdelivr.net/gh/SH20RAJ/AudiPlayV2@main/audiplayv2.js"></script>
+<!--Audio controls -->
+<audio controls>
+  <source src="https://github.com/SH20RAJ/AudiPlay/raw/main/Ark.mp3" type="audio/mpeg">
+  Your browser does not support audio controls.
+</audio>
+<audio controls>
+  <source src="https://assets.codepen.io/4358584/Anitek_-_Komorebi.mp3 type="audio/mpeg">
+  Your browser does not support audio controls.
+</audio>
 </body>
 </html>
