--- a/player.html
+++ b/player.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Simple audio player</title>
-  <link rel="icon" href="https://github.com/SH20RAJ/AudiPlay/raw/main/svg/loop.svg">
+  <title>Multiple HTML5 Player Audio Files</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <body>
-<!--Audio controls -->
-<audio controls>
-  <source src="https://github.com/SH20RAJ/AudiPlay/raw/main/Ark.mp3" type="audio/mpeg">
-  Your browser does not support audio controls.
-</audio>
-<audio controls>
-  <source src="https://assets.codepen.io/4358584/Anitek_-_Komorebi.mp3 type="audio/mpeg">
-  Your browser does not support audio controls.
-</audio>
+<html>
+  <body>
+  Audio 1<audio id="song1" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case1.mp3" controls></audio>
+  Audio 2<audio id="song2" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case2.mp3" controls></audio>
+  Audio 3<audio id="song3" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case3.mp3" controls></audio>
+  </body>
+</html>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="./script.js"></script>
 </body>
 </html>
