--- a/player.html
+++ b/player.html
@@ -9,9 +9,9 @@
 <body>
 <html>
   <body>
-  <div>Audio 1<audio id="song1" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case1.mp3" controls></audio></div>
-  <div>Audio 2<audio id="song2" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case2.mp3" controls></audio></div>
-  <div>Audio 3<audio id="song3" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case3.mp3" controls></audio></div>
+  <div><h3>Audio 1</h3><audio id="song1" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case1.mp3" controls></audio></div>
+  <div><h3>Audio 2</h3><audio id="song2" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case2.mp3" controls></audio></div>
+  <div><h3>Audio 3</h3><audio id="song3" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case3.mp3" controls></audio></div>
   </body>
 </html>
 <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
