--- a/player.html
+++ b/player.html
@@ -7,7 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <body>
-	<div class="container"><div class="column add-bottom">
+	<div class="container"><div class="column add-bottom center">
 	<div><h3>Audio 1</h3><audio id="song1" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case1.mp3" controls></audio></div>
 	<div><h3>Audio 2</h3><audio id="song2" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case2.mp3" controls></audio></div>
 	<div><h3>Audio 3</h3><audio id="song3" src="https://globalaccess.bowvalleycollege.ca/sites/default/files/case3.mp3" controls></audio></div>
